# skeleton

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-tidy.sh  conanfile.txt  meson.build  meson_options.txt  skeleton-project.code-workspace  skeleton.files  skeleton.includes  skeleton.project  skeleton.workspace
doc/: Doxyfile.in  README.txt  meson.build
documentation/: back_burner.h
dump/: dump.h
profiles/: clang-linux.ini
scripts/linux/: cmake-clang-debug.sh  cmake-clang-release.sh  cmake-gcc-debug.sh  cmake-gcc-release.sh  meson-clang-debug.sh  meson-clang-release.sh  meson-gcc-debug.sh  meson-gcc-release.sh
src/: application.cpp  application.h  clang-format.sh  clang-tidy.sh  config.h.in  main.cpp  skeleton.cpp  skeleton.h  skeletonapp.cpp  skeletonapp.h
src/Implementation/: ApplicationImplementation.cpp  ApplicationImplementation.h
src/Interface/: ApplicationInterface.h
src/base/: base.cpp  base.h
src/log/: log.cpp  log.h
src/skeleton/: skeleton.h
