option(
    'build-docs',
    type: 'boolean',
    value: false,
    description: 'Build the api documentation',
)
option(
    'enable-threads',
    type: 'boolean',
    value: false,
    description: 'Build with multi-threading support',
)
option(
    'enable-spdlog',
    type: 'boolean',
    value: true,
    description: 'Include spdlog in fancy log output to terminal and file',
)
