option(
    'build-docs',
    type: 'boolean',
    value: false,
    description: 'Build the api documentation',
)
option(
    'enable-threads',
    type: 'feature',
    value: 'disabled',
    description: 'Build with multi-threading support',
)
option(
    'enable-spdlog',
    type: 'feature',
    value: 'enabled',
    description: 'Include spdlog in fancy log output to terminal and file',
)
option(
  'use-mold',
  type: 'feature',
  value: 'disabled',
  description: 'Use mold as the linker',
)
  
